Modificacines Menores en js para darke funcinalidad a la barra de busqueda

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="categorias"> <span><i class="fa-solid fa-bars"></i> <a href="#"> CATEGORIAS</a> <i
                         class="fa-solid fa-chevron-down"></i></span> </div>
 
-            <div class="buscador"> <input type="text" placeholder="Buscar..."> <button>
+            <div class="buscador"> <input type="text" name="buscar" placeholder="Buscar..."> <button>
                     <i class="fa fa-magnifying-glass"></i>
                 </button>
             </div>
