modificaciones en css y html Cajon de Categorias

--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
         <nav class="nav">
 
             <div class="categorias"> <span><i class="fa-solid fa-bars"></i> <a href="#"> CATEGORIAS</a> <i
-                        class="fa-solid fa-chevron-down"></i></span> </div>
+                        class="fa-solid fa-chevron-down"></i></span> 
+                    <ul class="list-categ">
+                        <li><a href="#">items</a></li>
+                        <li><a href="#">items</a></li>   
+                    </ul>
+                    
+                    </div>
 
             <div class="buscador"> <input type="text" name="buscar" placeholder="Buscar..."> <button>
                     <i class="fa fa-magnifying-glass"></i>
